@@ -4,18 +4,22 @@ Makefile
 Makefile.in
 aclocal.m4
 config.cache
+config.guess
 config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 install-sh
 libskstream.la
 libtool
+ltmain.sh
 missing
 mkinstalldirs
 skserver.lo
 skstream-config
 skstream.lo
+skstream.spec
 stamp-h
 stamp-h.in
