@@ -4,7 +4,24 @@ AC_INIT(skstream.cpp)
 
 dnl Initialise automake
 
-AM_INIT_AUTOMAKE("skstream", "0.2.3")
+SKSTREAM_MAJOR=0
+SKSTREAM_MINOR=2
+SKSTREAM_MICRO=3
+SKSTREAM_VERSION=$SKSTREAM_MAJOR.$SKSTREAM_MINOR.$SKSTREAM_MICRO
+
+AC_SUBST(SKSTREAM_VERSION)
+
+SKSTREAM_CURRENT=2
+SKSTREAM_REVISION=0
+SKSTREAM_AGE=0
+SKSTREAM_VERSION_INFO=$SKSTREAM_CURRENT:$SKSTREAM_REVISION:$SKSTREAM_AGE
+SKSTREAM_VERSION_NO=$SKSTREAM_CURRENT.$SKSTREAM_AGE.$SKSTREAM_REVISION
+
+AC_SUBST(SKSTREAM_CURRENT)
+AC_SUBST(SKSTREAM_VERSION_INFO)
+AC_SUBST(SKSTREAM_VERSION_NO)
+
+AM_INIT_AUTOMAKE("skstream", $SKSTREAM_VERSION)
 AM_CONFIG_HEADER(config.h)
 
 dnl Test for GNU libtool
@@ -167,6 +184,7 @@ dnl Generate files
 
 AC_OUTPUT([
 	Makefile
-    test/Makefile
+	test/Makefile
 	skstream-config
+	skstream.spec
 ])
